# projexity

./: .gitignore  Cargo.toml  DEPLOY.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: error.rs  event.rs  id.rs  lib.rs  logs.rs  provider.rs  release.rs  state.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_init.sql  0002_prebuilt_images.sql  0003_github_app.sql  0004_template_deployments.sql
crates/db/src/: builds.rs  deployment_logs.rs  deployments.rs  env_vars.rs  github.rs  jobs.rs  lib.rs  projects.rs  sessions.rs  targets.rs  template_deployments.rs  users.rs
crates/github/: Cargo.toml
crates/github/src/: app.rs  lib.rs  webhook.rs
crates/provider-docker/: Cargo.toml
crates/provider-docker/src/: appstack.rs  bootstrap.rs  docker.rs  lib.rs  preflight.rs  transport.rs
crates/provider-k8s/: Cargo.toml
crates/provider-k8s/src/: client.rs  lib.rs  provider.rs  render.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  deploys.rs  jobs_deploy.rs  jobs_setup.rs  jobs_template.rs  main.rs  release.rs  routes.rs  routes_github.rs  routes_logs.rs  routes_projects.rs  routes_targets.rs  routes_templates.rs  secrets.rs  sshfiles.rs  state.rs  templates.rs  worker.rs
data/targets/019f7bb4-fad3-7131-bc2a-d139d59e6ad4/: id_ed25519  known_hosts
data/targets/019f7bc6-17b4-7d93-adfb-8f0883a93f8d/: id_ed25519  known_hosts
data/targets/019f7c0e-bd2a-7e61-9817-e7905aee8a0f/: id_ed25519  known_hosts
deploy/: Caddyfile
templates/: actual-budget.yaml  changedetection.yaml  code-server.yaml  excalidraw.yaml  freshrss.yaml  gitea.yaml  homepage.yaml  it-tools.yaml  jellyfin.yaml  linkding.yaml  memos.yaml  miniflux.yaml  n8n.yaml  navidrome.yaml  nextcloud.yaml  ntfy.yaml  paperless-ngx.yaml  stirling-pdf.yaml  umami.yaml  uptime-kuma.yaml  vaultwarden.yaml
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: api.ts  index.css  main.tsx  router.tsx  time.ts
web/src/components/: AppIcon.tsx  Brand.tsx  EmptyState.tsx  LogPanel.tsx  StatusPill.tsx  StepIcon.tsx
web/src/layout/: AppLayout.tsx
web/src/pages/: Apps.tsx  ChooseTarget.tsx  ConnectCluster.tsx  ConnectServer.tsx  Deployments.tsx  Login.tsx  NewProject.tsx  ProjectDetail.tsx  Projects.tsx  Settings.tsx  Targets.tsx
