[package]
name = "projexity-provider-k8s"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
k8s-openapi = { version = "0.24", features = ["latest"] }
kube = { version = "0.98", default-features = false, features = [
    "client",
    "rustls-tls",
    "runtime",
] }
projexity-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
