[package]
name = "projexity-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "projexity"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
argon2 = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
projexity-build = { workspace = true }
projexity-core = { workspace = true }
projexity-db = { workspace = true }
projexity-github = { workspace = true }
projexity-provider-docker = { workspace = true }
projexity-provider-k8s = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
time = "0.3"
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
